--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <nav>
+        <div id="menu">
+            
+        </div>
         <div></div>
         <div id="link">
             <a href="">作品</a>
@@ -111,10 +114,10 @@
         <textarea placeholder="請輸入您想要跟 KID 說的話" required></textarea>
         <input type="submit" value="送出" class="btn">
     </form>
-
+    
     <!-- 頁尾 -->
     <footer>
-        <a href="" class="logo"><span>{</span>ZZZ<span>}</span></a>
+        <a href="" class="logo"><span>{</span>ZZZ<span>}</span></a><br>
         <small>&copy; ZZZ 2021.</small>
         <a href="">作品</a>
         <a href="">文章</a>
